# production-ready-MLOps-on-GCP

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  env.sh  env.sh.example
cloudbuild/: e2e-test.yaml  (+6 more)
components/: pyproject.toml
components/src/components/: __init__.py  extract_table_to_gcs_op.py  get_custom_job_results_op.py  get_hyperparameter_tuning_results_op.py  get_training_args_dict_op.py  get_workerpool_spec_op.py  lookup_model_op.py  model_batch_predict_op.py  upload_best_model_op.py
components/tests/: conftest.py  test_extract_table_to_gcs_op.py  test_get_custom_job_results_op.py  test_get_hyperparameter_tuning_results_op.py  test_get_training_args_dict_op.py  test_get_workerpool_spec_op.py  test_lookup_model_op.py  test_model_batch_predict_op.py  test_upload_best_model_op.py
pipelines/: pyproject.toml
pipelines/src/: taxifare-pipeline.yaml  taxifare-prediction-pipeline.yaml  taxifare-training-pipeline.yaml
pipelines/src/pipelines/: prediction.py  training.py
pipelines/src/pipelines/queries/: ingest.sql  ingest_pred.sql  repeatable_splitting.sql
pipelines/src/pipelines/training/: pipeline.py
pipelines/src/pipelines/training/queries/: repeatable_splitting.sql
pipelines/src/pipelines/training/utils/: query.py  trigger_pipeline.py
pipelines/src/pipelines/utils/: schedule_pipeline.py  trigger_pipeline.py  trigger_pipeline_from_payload.py  upload_pipeline.py
pipelines/tests/: conftest.py  test_e2e.py
pipelines/tests/e2e/: test_e2e.py
pipelines/tests/utils/: test_trigger_pipelines.py  test_upload_pipeline.py
(+26 files in other folders)
